# integrated-water-flow-model

./: .gitignore  BUILD.md  Build-IWFM.ps1  CLAUDE.md  CMakeLists.txt  README.md  build_windows.bat
SourceCode/: CMakeLists.txt
SourceCode/Budget/: Budget.f90  BudgetControls.f90
SourceCode/CalcTypeHyd/: CalcTypeHyd_Main.f90  CalcTypeHyd_input_format.txt  CalcTypeHyd_template.in  Class_CalcTypeHyd.f90
SourceCode/GWHydExtract/: Class_GWHydExtract.f90  GWHydExtract_Main.f90  README.md
SourceCode/IWFM-kernel/: CMakeLists.txt
SourceCode/IWFM-kernel/IWFM_Kernel_Version/: IWFMKernelVersion.fi  IWFM_Kernel_Version.f90
SourceCode/IWFM-kernel/Package_AppGW/: Class_AppGW.f90  Class_GWState.f90  GWHydrograph.f90  Package_AppGW.f90  VerticalFlow.f90
SourceCode/IWFM-kernel/Package_AppLake/: Class_BaseAppLake.f90  Class_Lake.f90  Package_AppLake.f90
SourceCode/IWFM-kernel/Package_AppSmallWatershed/: Class_BaseAppSmallWatershed.f90  Package_AppSmallWatershed.f90
SourceCode/IWFM-kernel/Package_AppStream/: Class_AppDiverBypass.f90  Class_BaseAppStream.f90  Class_Bypass.f90  Class_Diversion.f90  Class_ElemToRecvLoss.f90  Class_LossDestination.f90  Class_StrmEvap.f90  Class_StrmInflow.f90  Class_StrmNode.f90  Class_StrmNodeBudget.f90  Class_StrmReach.f90  Class_StrmState.f90  Package_AppStream.f90  StrmHydrograph.f90
SourceCode/IWFM-kernel/Package_AppUnsatZone/: Package_AppUnsatZone.f90
SourceCode/IWFM-kernel/Package_Budget/: Budget_Parameters.f90  Class_Budget.f90  Class_BudgetInputFile.f90  Package_Budget.f90
SourceCode/IWFM-kernel/Package_ComponentConnectors/: LakeGWConnector.f90  Package_ComponentConnectors.f90  StrmLakeConnector.f90  SupplyDestinationConnector.f90
SourceCode/IWFM-kernel/Package_Discretization/: Class_AppFace.f90  Class_AppGrid.f90  Class_Grid.f90  Class_Stratigraphy.f90  Package_Discretization.f90  ParametricGrid.f90
SourceCode/IWFM-kernel/Package_GWZBudget/: Class_GWZBudget.f90  Package_GWZBudget.f90
SourceCode/IWFM-kernel/Package_Matrix/: Package_Matrix.f90
SourceCode/IWFM-kernel/Package_Miscellaneous/: AbstractFunction.f90  Class_BaseHydrograph.f90  Class_PairedData.f90  Class_SolverData.f90  Class_TecplotOutput.f90  Opening_screen_LINUX.f90  Opening_screen_WINDOWS.f90  Package_Misc.f90
SourceCode/IWFM-kernel/Package_PrecipitationET/: Class_AtmosphericData.f90  Package_PrecipitationET.f90
SourceCode/IWFM-kernel/Package_RootZone/: Class_BaseRootZone.f90  Class_GenericLandUse.f90  Class_GenericMoistureData.f90  Class_LandUseDataFile.f90  (+2 more)
SourceCode/IWFM2OBS/: Class_HeadDifference.f90  Class_HydrographReader.f90  Class_IWFM2OBS.f90  Class_MultiLayerTarget.f90  Class_PESTOutput.f90  Class_SMP2SMP.f90  iwfm2obs_template.in
SourceCode/IWFM_Core_Version/: IWFM_Core_Version.f90  Revision.fi
SourceCode/IWFM_DLL/: IWFM_Budget_Exports_C.f90  IWFM_Misc_Exports_C.f90  IWFM_Model_Exports_C.f90  IWFM_ZBudget_Exports_C.f90
SourceCode/IWFM_Version/: IWFMVersion.fi  IWFM_Version.f90
SourceCode/Package_AppGW/: Class_AppGW.f90  Class_GWState.f90  GWHydrograph.f90  Package_AppGW.f90  VerticalFlow.f90
SourceCode/Package_AppLake/: Class_BaseAppLake.f90  Class_Lake.f90  Package_AppLake.f90  Package_AppLake_Revision.fi
SourceCode/Package_AppPumping/: Class_ElementPumping.f90  Class_Pumping.f90  Class_PumpsAtElem.f90  Class_Well.f90  Package_AppPumping.f90
SourceCode/Package_AppSmallWatershed/: Package_AppSmallWatershed.f90
SourceCode/Package_AppStream/: Class_AppDiverBypass.f90  Class_BaseAppStream.f90  Class_Bypass.f90  Class_Diversion.f90  Class_ElemToRecvLoss.f90  Class_RechargeZone.f90  Class_StrmEvap.f90  Class_StrmInflow.f90  Class_StrmNode.f90  Class_StrmNodeBudget.f90  Class_StrmReach.f90  Class_StrmState.f90  Package_AppStream.f90  Package_AppStream_Revision.fi  StrmHydrograph.f90
SourceCode/Package_AppSubsidence/: Class_BaseAppSubsidence.f90  Package_AppSubsidence.f90  Package_AppSubsidence_Revision.fi
SourceCode/Package_AppTileDrain/: AppTileDrain_Parameters.f90  Class_BaseTileDrain.f90  Package_AppTileDrain.f90  TileDrainHydrograph.f90
SourceCode/Package_AppUnsatZone/: Package_AppUnsatZone.f90
SourceCode/Package_Budget/: Budget_Parameters.f90  Class_Budget.f90  Class_BudgetInputFile.f90  Package_Budget.f90  Package_Budget_Revision.fi
SourceCode/Package_ComponentConnectors/: LakeGWConnector.f90  Package_ComponentConnectors.f90  Package_ComponentConnectors_Revision.fi  StrmLakeConnector.f90  SupplyDestinationConnector.f90
SourceCode/Package_Discretization/: Class_AppFace.f90  Class_AppGrid.f90  Class_Grid.f90  Class_Stratigraphy.f90  Package_Discretization.f90  ParametricGrid.f90
SourceCode/Package_GWZBudget/: Class_GWZBudget.f90  GWZBudget_Parameters.f90  Package_GWZBudget.f90
SourceCode/Package_Matrix/: Package_Matrix.f90  pgmres.f90
SourceCode/Package_Miscellaneous/: AbstractFunction.f90  Class_BaseHydrograph.f90  Class_GeneralHeadBoundary.f90  Class_PairedData.f90  Class_SolverData.f90  Class_TecplotOutput.f90  Opening_screen_LINUX.f90  Opening_screen_WINDOWS.f90  Package_Misc.f90
SourceCode/Package_Model/: Class_Model_ForInquiry.f90  Package_Model.f90
SourceCode/Package_PrecipitationET/: Class_AtmosphericData.f90  Package_PrecipET_Revision.fi  Package_PrecipitationET.f90
SourceCode/Package_RootZone/: Class_BaseRootZone.f90  Class_GenericLandUse.f90  Class_GenericMoistureData.f90  Class_LandUseDataFile.f90  Package_RootZone.f90  Package_RootZone_Revision.fi  Util_Package_RootZone.f90
SourceCode/Package_Supply/: Class_IrigFracFile.f90  Package_Supply.f90  SupplyAdjustment.f90
SourceCode/Package_UnsatZone/: Class_Soil.f90  Package_UnsatZone.f90  RainfallRunoff.f90  UnsatZoneOps.f90
SourceCode/Package_ZBudget/: Class_SystemData.f90  Class_ZBudget.f90  Class_ZBudgetHeader.f90  Class_ZoneList.f90  Package_ZBudget.f90  ZBudget_Parameters.f90  ZBudget_Util.f90
SourceCode/PreProcessor/: Iwfm_f1.f90
SourceCode/Simulation/: Iwfm_f2.f90
SourceCode/Simulation_MM/: IWFM_f2_MM.f90
SourceCode/WSA_ANN/: WSA_ANN.f90
SourceCode/ZBudget/: ZBudgetControls.f90  ZBudget_Main.f90
SourceCode/tests/: test_dss_read.f90
(+185 files in other folders)
